# ruma

crates/ruma/: Cargo.toml
crates/ruma-appservice-api/: Cargo.toml
crates/ruma-client/: Cargo.toml
crates/ruma-client-api/: Cargo.toml
crates/ruma-common/: Cargo.toml
crates/ruma-federation-api/: Cargo.toml
crates/ruma-identifiers-validation/: Cargo.toml
crates/ruma-identity-service-api/: Cargo.toml
crates/ruma-macros/: Cargo.toml
crates/ruma-push-gateway-api/: Cargo.toml
crates/ruma-server-util/: Cargo.toml
crates/ruma-signatures/: Cargo.toml
crates/ruma-state-res/: Cargo.toml
xtask/: Cargo.toml
