[package]
name = "ruma-state-res"
categories = ["api-bindings", "web-programming"]
keywords = ["matrix", "chat", "ruma"]
description = "An abstraction for Matrix state resolution."
homepage = "https://www.ruma.io/"
repository = "https://github.com/ruma/ruma"
readme = "README.md"
license = "MIT"
version = "0.8.0"
edition = "2021"
rust-version = "1.64"

[package.metadata.docs.rs]
all-features = true

[features]
unstable-exhaustive-types = []

[dependencies]
itertools = "0.10.0"
js_int = "0.2.2"
ruma-common = { version = "0.10.5", path = "../ruma-common", features = ["events"] }
serde = { version = "1.0.147", features = ["derive"] }
serde_json = "1.0.87"
thiserror = "1.0.37"
tracing = { version = "0.1.37", default-features = false, features = ["std"] }

# dev-dependencies can't be optional, so this is a regular dependency
criterion = { version = "0.4.0", optional = true }

[dev-dependencies]
maplit = "1.0.2"
rand = "0.8.3"
ruma-common = { version = "0.10.5", path = "../ruma-common", features = ["unstable-pdu"] }
tracing-subscriber = "0.3.16"

[[bench]]
name = "state_res_bench"
harness = false
required-features = ["criterion"]
